fixed ParseLiteral, now understand difference between parseLong and parseUnsignedLong